version 2.2.0 (2023-07-??)
	- FEATURE: add ms_get_timer (lib) and .timer (getter in TS) to see which
		timer has been used.  Will also write that into the JSON (.stats.timer)

version 2.1.2 (2023-06-30)
	- fix build errors
	- fix segfault caused by incorrect syscall in timer.c
	- adding `destroy` method to cleanly free/unmap data
	- fixed printer prefixes and line breaks (in case the check fails)

version 2.1.1 (2023-06-29)
	- fix package-lock.json file
	- code quality: replace forbidden assertion with actual assertion

version 2.1.0 (2023-06-29)
	- lib: Bug worked around, which caused stack smashing. I don't know why this is
	  happening, but it turns out that if `get_fdperf` is inlined, the syscall
	  overwrites the canary. If we prevent inlining, this issue does not
	  appear. Also added some more attributes like size to the attr.
	- ms: Checking if there is a symbol, when specifying `.so`s
	- msc: Feature: new wrapper script around `./ms`. Give this script a
		couple filenames and it will report how fast all others are compared
		to a baseline.
	- Fixed a invalid extension check:
        Instead of checking, whether the filename ends with .o,
        the code was only checking if .o is in the filename.
	- Minor: clarified help text in ms-binary
	- Updated Typescript Dependencies
	- Fixed issue when `pkg-config` is not installed
	- Makefile, added missing `-ldl` to the link step for `ms`. This caused
	  issues on older systems (How did that work without?)
	- Makefile removed duplicated 'check' target
	- Makefile added 'DEBUG' variable. To use debug mode, use
	    `make DEBUG=1 -B`, which will define `ENABLE_DEBUG` and `-g` for debug
		symbols.
 	- Reworked printing if the check fails.
		Will now always print the hex, and binary if compiled with debug

version 2.0.1 (2023-01-19)
	- Fixed a bug causing out-of-memory after repeated calls to 'measure'
	  from the typescript wrapper
	- API: added the unload_{all,last} function to the native module
