@@ -58,7 +58,7 @@ describe("general with test_lib", () => {
     // Because all the functions calculate the same result, the id of the incorrect function shall be 0
     expect(measurementResult.stats.incorrect).toBe(0);
 
-    // Should either have used RDTCSP or PMC
+    // Should either have used RDTSCP or PMC
     expect(["RDTSCP", "PMC"]).toContain(measurementResult.stats.timer);
     expect(ms.timer).toBe(measurementResult.stats.timer);
 
